2011-03-04 Riccardo Mottola <rm@gnu.org>

	* RSSFeed+Fetching.m:
	Add detection of RSS version 0.92

2010-09-14 Riccardo Mottola

	* GNUstep.h: added define for NSUInteger for old macs
	* RSSArticle.[h,m],
	* RSSFeed.[h,m] : change signature of hash to NSUInteger

July-13-2009 Riccardo Mottola
	* Removed several c99-isms

May-01-2007  Yen-Ju Chen
	* Turn into framework

Feb-19-2007  Yen-Ju Chen
	* Format README in reStructuedText

Feb-17-2007  Guenther Noack
	* RSSArticleCreationListener.m:
	  Parse english dates, even in other locales

Feb-12-2007  Guenther Noack
	* RSSFeed.m:
	* RSSFeed+Storage.m:
	* RSSArticle.m:
	  Memory leaks fixed

Jan-30-2007  Guenther Noack
	* RSSFeed.m: Fixed bug that feeds couldn't be compared for equality
	  with non-feed objects.

Jan-21-2007  Guenther Noack
	* RSSFeed+Fetching.m: Fixed bug where freshly created articles
	  didn't know their parent feed.
	* FeedParser.m: Updated a FIXME

Jan-13-2007  Guenther Noack
	* INTRO: Added a small note concerning the way how to obtain the
          Grr development version as a programming example for RSSKit.

Dec-6-2006  Guenther Noack
	* ATOM 0.3, 1.0: Accept text/plain and text/html as types, too

Nov-27-2006  Guenther Noack
	* DOMParser: CDATA support added
	* RSSArticleCreationListener: more date formats added
	* ChangeLog file: Cleaned up a bit (added my name to old
	  entries where I was the only contributor)
	* GNUmakefile: Made the etoile.make include 'weak' (presence
	  of it is no longer required in order to compile)

Nov-26-2006  Guenther Noack
	* RSSArticle: -description method now returns the headline. Please
	  use the -content method to retrieve the article content now. This
	  breaks compatibility with old Grr versions but makes more sense.
	* RSSFeed delegate: Removed (not used by Mollusk nor Grr)
	* RSSFeed: performance improvements when autoclear is off
	* RSSFeed protocol: Added autoclear accessor methods

Nov-12-2006  Yen-Ju Chen
	* Process namespace for XMLParser.